--- a/src/index.css
+++ b/src/index.css
@@ -5,17 +5,17 @@
 }
 
 :root {
-  /* Enterprise Color Palette - Teal (Temporary) */
-  --primary-50: #f0fdfa;
-  --primary-100: #ccfbf1;
-  --primary-200: #99f6e4;
-  --primary-300: #5eead4;
-  --primary-400: #2dd4bf;
-  --primary-500: #14b8a6;
-  --primary-600: #0d9488;
-  --primary-700: #0f766e;
-  --primary-800: #115e59;
-  --primary-900: #134e4a;
+  /* Enterprise Color Palette - Vivaro Blue */
+  --primary-50: #e3f2fd;
+  --primary-100: #bbdefb;
+  --primary-200: #90caf9;
+  --primary-300: #64b5f6;
+  --primary-400: #42A5F5;
+  --primary-500: #1565C0;
+  --primary-600: #0d47a1;
+  --primary-700: #0a3d91;
+  --primary-800: #083278;
+  --primary-900: #051f4d;
 
   /* Neutral Colors */
   --gray-50: #f9fafb;
